# Knowledge-Extraction-Using-Dynamic-Schema-Generation

./: .env.example.env  .gitignore  LICENSE  README.md  WORKFLOW.md  data_extractor.py  extraction_config.py  extraction_example.py  extractor.py  pyproject.toml  requirements.txt  schema_basic.py  schema_generator.py  schema_generator_BKP.py
examples/: extraction_example_1.py  extraction_example_2.py  extraction_example_3.py  extraction_example_4.py  saved_project_schema.py
parsers/: __init__.py  docling_parser.py  docx_parser.py  pymupdf_parser.py  vision_parser.py
src/extractors/: __init__.py  config.py  extractor.py  schema.py
src/extractors/parsers/: __init__.py  vision.py
