[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extractors"
version = "0.1.0"
description = "Knowledge extraction using dynamic schema generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.58.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
docling = [
    "docling",
    "psutil",
]
docx = [
    "python-docx",
]

[tool.setuptools.packages.find]
where = ["src"]
